<resources>
    <string name="app_name">Xoom Gas</string>


    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="enter_the_verification_code_sent_to">Enter the verification code sent to</string>

    <string name="get_your_gas_delivered">Get Your Gas Delivered</string>
    <string name="log_in_or_sign_up_to_place_your_order">Log in or sign Up to place your order</string>
    <string name="con">Continue</string>

    <string name="icon">icon</string>
    <string name="current_location">Current location</string>
    <string name="search_on_xoom">Search on Xoom</string>
    <string name="gas">Gas</string>
    <string name="accessories">Accessories</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="ordered">ordered</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="from_kes_1_500">From KES: 1,500</string>
    <string name="currency"> KES. </string>

    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="shoping_cart">Shopping cart</string>
    <string name="order_details">Order details</string>

    <string name="sub_total">Subtotal</string>
    <string name="change">Change</string>
    <string name="select_payment_methid">Select payment method</string>
    <string name="delivery_address">Delivery address</string>
    <string name="confirm_order">Submit order</string>
    <string name="payment_method">Payment Method</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="track_order">Track order</string>
    <string name="reorder">Reorder</string>

    <string name="submitted">Submitted</string>
    <string name="accepted">Payment Received</string>
    <string name="on_transit">Out for Delivery</string>
    <string name="completed">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="are_sure">"the order will be cancel ! are you sure? "</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save_location">Add Address</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="default_notification_channel_id">11</string>
    <string name="driver_details">Driver details</string>
    <string name="scan_by_driver">Show the code to the driver to confirm your order delivery</string>
    <string name="confirm_processing">Order Submitted</string>
    <string name="check">check payment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="pick_location">Confirm location</string>
    <string name="location_permission_denied">location permission denied</string>
    <string name="permission_required_toast">location permission required</string>
    <string name="permission_rationale_location">location permission</string>
    <string name="building_details"><![CDATA[Building & details]]></string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="please_add_address_title_and_deatails">Please, add address title and details</string>
    <string name="nextarrow">Next</string>
    <string name="location_map">Set location on map</string>
    <string name="resend">Resend in %1$ss</string>


</resources>