<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/purple_500"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/save_location"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="UseCompatTextViewDrawableXml" />


    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout" />

    <ImageView
        android:id="@+id/imgLocationPinUp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_address"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:gravity="center"
        android:id="@+id/btnConfirmLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_500"
        android:enabled="true"
        android:padding="8dp"
        android:text="@string/nextarrow"
        android:textAllCaps="false"
        android:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layoutAddLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:visibility="gone">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/please_add_address_title_and_deatails"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/purple_200"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/details"
                android:backgroundTint="@color/purple_200"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/building_details"
                android:backgroundTint="@color/purple_200"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/purple_500"
                android:enabled="true"
                android:text="@string/pick_location"
                android:textAllCaps="false" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</RelativeLayout>